# xai-playwright

./: README.md  playwright_components.py  pyproject.toml
.github/workflows/: run-workflow-tests.yml
examples/: PlaywrightSample.py  PlaywrightSample.xircuits
