[project]
name = "xai-playwright"
version = "0.1.0"
description = "Xircuits Component Library to interface with Playwright"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-playwright"
keywords = ["xircuits", "playwright"]

dependencies = [
    "playwright",
]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/PlaywrightSample.xircuits"
requirements_path = "requirements.txt"
